--- a/cndamanager/frontend/package.json
+++ b/cndamanager/frontend/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^2.1.4",
     "xtypejs": "^0.7.1"
   },
+  "homepage": "/cnda",
   "scripts": {
     "start": "react-scripts start",
     "build": "BUILD_PATH=../api/dist react-scripts build",
