--- a/cndamanager/frontend/package.json
+++ b/cndamanager/frontend/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4",
     "xtypejs": "^0.7.1"
   },
-  "homepage": "https://dosenbachlab.wustl.edu/cnda/",
+  "homepage": "https://dosenbachlab.wustl.edu/cnda",
   "scripts": {
     "start": "craco start",
     "build": "BUILD_PATH=../api/dist craco build",
